# minions

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: .conductor-session  .pr-status  SESSION_HANDOFF.md  config.json  settings.json  settings.json.pre-global-backup  test-allowlist.md  test-summary.md
.claude/agents/: notification-agent.md  permission-judge.md  stop-judge.md
.claude/agents/instructions/: conductor.md  musician.md  section_leader.md
.claude/docs/: AUTO_APPROVE_HOOK.md  DESIGN.md  GLOBAL_CONFIG_DESIGN.md  HOME_ERROR_HANDLING.md  MEMORY_ANALYSIS.md  MEMORY_SYSTEM.md  PERMISSION_HOOKS_DESIGN.md  VERIFICATION_SYSTEM.md  hierarchy-analysis.md  implementation-plan.md  jj-to-git-migration-report.md  memory-cycle-design.md  memory-system-design-v2.md
.claude/hooks/: agent-router.py  auto-commit-on-verify.py  auto-create-pr.py  auto-learn.py  check-codex-after-plan.py  check-codex-before-write.py  enforce-delegation.py  enforce-draft-pr.py  enforce-hierarchy.py  enforce-japanese.py  enforce-no-merge.py  ensure-noreply-email.py  ensure-pr-open.py  hierarchy-permissions.py  lint-on-save.py  load-memories.py  log-cli-tools.py  post-implementation-review.py  post-test-analysis.py  post-tool-record.py  pre-tool-recall.py  suggest-gemini-research.py
.claude/memory/: events.jsonl
.claude/rules/: agent-hierarchy.md  copilot-delegation.md  version-control.md
.claude/scripts/: config_utils.py  hook-debug.sh  reset-delegation.py
.claude/skills/checkpointing/: checkpoint.py
.claude/skills/delegate/: SKILL.md
.claude/skills/playwright/: SKILL.md  screenshot.py
.claude/skills/pr-workflow/: SKILL.md
.claude/skills/remember/: SKILL.md
hooks-rs/: Cargo.toml  README.md
hooks-rs/crates/hook-common/: Cargo.toml
hooks-rs/crates/hook-common/src/: debug.rs  lib.rs  output.rs  subprocess.rs
hooks-rs/crates/hook-memory/: Cargo.toml
hooks-rs/crates/hook-memory/src/: storage.rs
hooks-rs/crates/hooks/auto-commit-on-verify/: Cargo.toml
hooks-rs/crates/hooks/auto-commit-on-verify/src/: main.rs
hooks-rs/crates/hooks/auto-create-pr/: Cargo.toml
hooks-rs/crates/hooks/auto-learn/: Cargo.toml
hooks-rs/crates/hooks/auto-learn/src/: main.rs
hooks-rs/crates/hooks/check-codex-before-write/src/: main.rs
hooks-rs/crates/hooks/enforce-delegation/: Cargo.toml
hooks-rs/crates/hooks/enforce-delegation/src/: main.rs
hooks-rs/crates/hooks/enforce-draft-pr/: Cargo.toml
hooks-rs/crates/hooks/enforce-draft-pr/src/: main.rs
hooks-rs/crates/hooks/enforce-hierarchy/: Cargo.toml
hooks-rs/crates/hooks/enforce-hierarchy/src/: main.rs
hooks-rs/crates/hooks/enforce-japanese/src/: main.rs
hooks-rs/crates/hooks/ensure-noreply-email/: Cargo.toml
hooks-rs/crates/hooks/ensure-noreply-email/src/: main.rs
hooks-rs/crates/hooks/ensure-pr-open/: Cargo.toml
hooks-rs/crates/hooks/ensure-pr-open/src/: main.rs
hooks-rs/crates/hooks/lint-on-save/src/: main.rs
hooks-rs/crates/hooks/load-memories/src/: main.rs
hooks-rs/crates/hooks/log-cli-tools/: Cargo.toml
hooks-rs/crates/hooks/post-implementation-review/: Cargo.toml
hooks-rs/crates/hooks/post-test-analysis/src/: main.rs
hooks-rs/crates/hooks/post-tool-record/src/: main.rs
hooks-rs/crates/hooks/pre-tool-recall/: Cargo.toml
hooks-rs/crates/hooks/pre-tool-recall/src/: main.rs
hooks-rs/crates/hooks/session-start/src/: main.rs
hooks-rs/crates/hooks/suggest-gemini-research/: Cargo.toml
hooks-rs/crates/hooks/suggest-gemini-research/src/: main.rs
resources/hooks/: auto-approve-safe.py  session-end.py
resources/hooks-rs/: Cargo.toml  build.sh  fix-settings-quotes.py  install-hooks.sh
resources/hooks-rs/.claude/: .conductor-session  .session-pr-created
resources/hooks-rs/crates/hook-common/src/: input.rs  lib.rs  state.rs  subprocess.rs
resources/hooks-rs/crates/hook-memory/: Cargo.toml
resources/hooks-rs/crates/hook-memory/src/: lib.rs  schema.rs
resources/hooks-rs/crates/hooks/agent-router/: Cargo.toml
resources/hooks-rs/crates/hooks/agent-router/src/: main.rs
resources/hooks-rs/crates/hooks/auto-create-pr-on-push/: Cargo.toml
resources/hooks-rs/crates/hooks/auto-create-pr-on-push/src/: main.rs
resources/hooks-rs/crates/hooks/auto-create-pr/src/: main.rs
resources/hooks-rs/crates/hooks/auto-learn/src/: main.rs
resources/hooks-rs/crates/hooks/check-codex-after-plan/: Cargo.toml
resources/hooks-rs/crates/hooks/check-codex-after-plan/src/: main.rs
resources/hooks-rs/crates/hooks/check-codex-before-write/: Cargo.toml
resources/hooks-rs/crates/hooks/enforce-delegation/: Cargo.toml
resources/hooks-rs/crates/hooks/enforce-japanese/: Cargo.toml
resources/hooks-rs/crates/hooks/enforce-no-merge/: Cargo.toml
resources/hooks-rs/crates/hooks/enforce-no-merge/src/: main.rs
resources/hooks-rs/crates/hooks/ensure-pr-open/src/: main.rs
resources/hooks-rs/crates/hooks/hierarchy-permissions/: Cargo.toml
resources/hooks-rs/crates/hooks/hierarchy-permissions/src/: main.rs
resources/hooks-rs/crates/hooks/lint-on-save/: Cargo.toml
resources/hooks-rs/crates/hooks/load-memories/: Cargo.toml
resources/hooks-rs/crates/hooks/log-cli-tools/src/: main.rs
resources/hooks-rs/crates/hooks/post-test-analysis/: Cargo.toml
resources/hooks-rs/crates/hooks/post-tool-record/: Cargo.toml
resources/hooks-rs/crates/hooks/session-start/: Cargo.toml
resources/hooks-rs/crates/hooks/verify-completion/: Cargo.toml
scripts/: agent-wrapper.sh  build-hooks.sh  dashboard.sh  install-hooks.sh  setup-global-config.sh  start-orchestra.sh  verify-on-done.sh  verify.sh
scripts/hooks/: notification.sh  permission-request.sh
scripts/hooks/lib/: llm_judge.sh  recursion_guard.sh  verifier.sh
src/minions/agents/: __init__.py  base.py  claude_cli.py  permissions.py
src/minions/memory/: __init__.py  broker.py  cli.py  compaction.py  embeddings.py  policy.py  schema.py  scoring.py
tests/: setup-global-config.bats  test_agents.py  test_memory.py  test_memory_integration.py  test_parity.py  test_rust_hooks.py
tests/hook_recorder/: __init__.py  record_all.py  record_hook.py
(+102 files in other folders)
