[workspace]
resolver = "2"
members = [
    "crates/hook-common",
    "crates/hooks/enforce-no-merge",
    "crates/hooks/enforce-draft-pr",
    "crates/hooks/prevent-secrets-commit",
    "crates/hooks/ensure-pr-open",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/gyumaruya/minions"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Regex
regex = "1.10"

# File system
tempfile = "3.10"
fs2 = "0.4"
camino = "1.1"

# Process
duct = "0.13"

# Testing
assert_cmd = "2.0"
predicates = "3.1"
insta = { version = "1.39", features = ["yaml"] }

# Internal
hook-common = { path = "crates/hook-common" }
