[workspace]
resolver = "2"
members = [
    "crates/hook-common",
    "crates/hook-memory",
    # Tier 1 - Core blocking hooks
    "crates/hooks/enforce-no-merge",
    "crates/hooks/enforce-draft-pr",
    "crates/hooks/prevent-secrets-commit",
    "crates/hooks/ensure-pr-open",
    # Tier 2 - Workflow hooks
    "crates/hooks/enforce-japanese",
    "crates/hooks/lint-on-save",
    "crates/hooks/log-cli-tools",
    "crates/hooks/ensure-noreply-email",
    "crates/hooks/auto-create-pr",
    "crates/hooks/enforce-delegation",
    "crates/hooks/auto-commit-on-verify",
    "crates/hooks/agent-router",
    # Tier 3 - Hierarchy hooks
    "crates/hooks/enforce-hierarchy",
    "crates/hooks/hierarchy-permissions",
    # Tier 4 - Suggestion hooks
    "crates/hooks/post-test-analysis",
    "crates/hooks/check-codex-before-write",
    "crates/hooks/check-codex-after-plan",
    "crates/hooks/suggest-gemini-research",
    "crates/hooks/post-implementation-review",
    # Tier 5 - Memory hooks
    "crates/hooks/load-memories",
    "crates/hooks/auto-learn",
    "crates/hooks/pre-tool-recall",
    "crates/hooks/post-tool-record",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/gyumaruya/minions"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Regex
regex = "1.10"

# Time
chrono = { version = "0.4", features = ["serde"] }

# File system
tempfile = "3.10"
fs2 = "0.4"
camino = "1.1"

# Process
duct = "0.13"

# Testing
assert_cmd = "2.0"
predicates = "3.1"
insta = { version = "1.39", features = ["yaml"] }

# Internal
hook-common = { path = "crates/hook-common" }
hook-memory = { path = "crates/hook-memory" }
