[package]
name = "hook-common"
version.workspace = true
edition = "2024"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
regex.workspace = true
tempfile.workspace = true
camino.workspace = true
duct.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
insta.workspace = true
