[package]
name = "auto-learn"
version.workspace = true
edition = "2024"

[[bin]]
name = "auto-learn"
path = "src/main.rs"

[dependencies]
hook-common.workspace = true
hook-memory.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
anyhow.workspace = true
camino.workspace = true
