[package]
name = "post-tool-record"
version.workspace = true
edition = "2024"

[[bin]]
name = "post-tool-record"
path = "src/main.rs"

[dependencies]
hook-common.workspace = true
hook-memory.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
camino.workspace = true
